# NoLossLottery

./: .gitignore  Anchor.toml  README.md  deploy.sh  nolosslottery.json  package.json  tsconfig.json
cli-client/: README.md  package-lock.json  package.json  queue_43gdiuKG6T4EJUQQm5Udme9AiCDPKMbijtTgPVvw3JyV.json  state_4Pw3C1sv5c2DJKP7sasvBvGFV2LUCrbBeovaoc4wE1F4.json  tsconfig.json
cli-client/secrets/: vrf_account_6MU5zfucvmCukoRvZehfejzwreYvtSvjhi6Nib1wGxtr-keypair.json
cli-client/src/commands/: balance.ts  create.ts  deposit.js  deposit.ts  lottery.js  lottery.ts  payout.ts  request_vrf.ts  setup_vrf.ts  update_prize.ts  user.js  user.ts  withdraw.ts
cli-client/src/idl/: nolosslottery.json
cli-client/src/types/: nolosslottery.js  nolosslottery.ts
cli-client/src/utils/: anchor.ts
config/wallet/: id.json
programs/nolosslottery/: Cargo.toml
programs/nolosslottery/src/: actions.rs  addresses.rs  errors.rs  helpers.rs  lib.rs  state.rs
programs/nolosslottery/src/actions/: calculate_prize.rs  deposit.rs  init_lottery.rs  init_state.rs  init_user_deposit.rs  lottery.rs  mod.rs  payout.rs  provide.rs  request_result.rs  update_result.rs  withdraw.rs
programs/nolosslottery/src/state/: lottery.rs  ticket.rs  user_deposit.rs  vrf_client.rs
programs/user-deposit/: Cargo.toml
programs/user-deposit/src/: lib.rs
programs/withdraw-deposit/: Cargo.toml
programs/withdraw-deposit/src/: lib.rs
tests/: helpers.ts  nolosslottery.js  nolosslottery.test.ts  nolosslottery.ts  package.json  user-deposit.ts
user-deposit/: Anchor.toml  README.md
user-deposit/programs/user-deposit/: Cargo.toml
user-deposit/programs/user-deposit/src/: addresses.rs  lib.rs
user-deposit/tests/: user-deposit.ts
